Primer commit de la rama cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Agregamos Cabecera
+                Agregamos Cabecera ya con el git
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
