Se agrega contenido en master y otra tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,10 @@
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             </div>
+            <div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsam fugiat repellat vel veritatis aspernatur veniam illum sapiente, blanditiis porro non tempora temporibus saepe eaque dolore pariatur, ut molestiae? Ut?
+            </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, odit quae soluta libero vero, sequi natus perspiciatis quo unde reprehenderit exercitationem nobis quisquam voluptate sed, saepe hic voluptas quod rerum!</p>
         </div>
     </body>
 </html>
