Se suben cambios del header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>Bienvenido a HyperBlog SSH</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
@@ -15,10 +16,6 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
-            <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsam fugiat repellat vel veritatis aspernatur veniam illum sapiente, blanditiis porro non tempora temporibus saepe eaque dolore pariatur, ut molestiae? Ut?
-            </div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, odit quae soluta libero vero, sequi natus perspiciatis quo unde reprehenderit exercitationem nobis quisquam voluptate sed, saepe hic voluptas quod rerum!</p>
         </div>
     </body>
 </html>
